packages/kyvernoPolicies/chart/tests/vpol/disallow-namespaces-cel/chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-allowed-ns
  namespace: kube-public
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
