packages/kyvernoPolicies/chart/tests/vpol/disallow-namespaces-cel/chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-default-ns
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
