packages/kyvernoPolicies/chart/tests/vpol/disallow-namespaces-cel/chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-namespaces-cel
spec:
  timeouts:
    cleanup: 2m
  steps:
  - name: step-01
    try:
    - apply:
        file: ../policy.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: disallow-namespaces-cel
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        dryRun: true
        expect:
        - check:
            ($error != null): true
            (contains($error, 'validate.kyverno.svc')): true
            (contains($error, 'disallow-namespaces-cel')): true
        file: pod-bad.yaml
    - apply:
        dryRun: true
        expect:
        - check:
            ($error != null): true
            (contains($error, 'validate.kyverno.svc')): true
            (contains($error, 'disallow-namespaces-cel')): true
        file: podcontroller-bad.yaml
    - apply:
        dryRun: true
        file: pod-good.yaml
    - apply:
        dryRun: true
        file: podcontroller-good.yaml
